Negative margin block doesn't properly clear a float enclosed by a previous sibling https://bugs.webkit.org/show_bug.cgi?id=10900

Reviewed by Eric Seidel.

Source/WebCore:

Tests: fast/block/float/previous-sibling-abspos-001.html
       fast/block/float/previous-sibling-abspos-002.html
       fast/block/float/previous-sibling-float-001.html
       fast/block/float/previous-sibling-float-002.html
       fast/css/clear-float-sibling.html

Parent blocks keep a list of child floats that extend out of the parent block and
by implication overhang into the parent's siblings. But this doesn't work if the
sibling has collapsing margins - it will not find the float in the previous block's
list so will ignore the float and fail to clear it.

RenderBlock:collapseMargins() needs to check if a child's collapsing margin has
reduced the height of the parent up past the bottom of its previous sibling's lowest float
and add the now overhanging float to the parent's float list if appropriate. No need to do
this if the previous sibling is a float or is positioned - the child will clear/avoid it anyway
and attempting to avoid floated children of floats causes incorrect layout.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::collapseMargins):

LayoutTests:

* fast/block/float/previous-sibling-abspos-001-expected.html: Added.
* fast/block/float/previous-sibling-abspos-001.html: Added.
* fast/block/float/previous-sibling-abspos-002-expected.html: Added.
* fast/block/float/previous-sibling-abspos-002.html: Added.
* fast/block/float/previous-sibling-float-001-expected.html: Added.
* fast/block/float/previous-sibling-float-001.html: Added.
* fast/block/float/previous-sibling-float-002-expected.html: Added.
* fast/block/float/previous-sibling-float-002.html: Added.
* fast/css/clear-float-sibling-expected.html: Added.
* fast/css/clear-float-sibling.html: Added.


Canonical link: https://commits.webkit.org/107443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120844 268f45cc-cd09-0410-ab3c-d52691b4dbfc